# Swing_Game

./: README.md  README.txt
src/: CMakeLists.txt  Game.c  Glow.c  Glow.h  Layers.h  Resource_Manager.c  Resource_Manager.h  Scenes.c  Scenes.h
src/Builders/: End_Level_Menu_Build.c  Level_1_Surfaces_Build.c  Level_1_Surfaces_Build.h  Level_2_Basic_Build.c  Level_2_Basic_Build.h  Level_3_Basic_Build.c  Level_3_Basic_Build.h  Level_UI_Build.c
src/Components/: Camera_Controller.c  Camera_Controller.h  Display_Time.c  Display_Time.h  Gem_Controller.c  Gem_Controller.h  Level_Select_Camera_Controller.c  Level_Select_Camera_Controller.h  Level_Select_Navigator.c  Level_Select_Navigator.h  Level_Title.c  Level_Title.h  Level_Transitioner.c  Level_Transitioner.h  Player_Controller.c  Player_Controller.h  Portal_Catcher.c  Portal_Catcher.h  Portal_Renderer.c  Portal_Renderer.h  Rope_Controller.c  Rope_Controller.h  Score_Counter.c  Score_Counter.h  Timer_Clock.c  Timer_Clock.h
src/Entities/: Background.c  Background.h  Camera.c  Camera.h  Gem.c  Gem.h  Hook_Surface.c  Hook_Surface.h  Hook_Surface2.c  Hook_Surface2.h  Level_Select_Camera.c  Level_Select_Camera.h  Level_Selector.c  Level_Selector.h  Menu_Button.c  Menu_Button.h  Menu_Camera.c  Menu_Camera.h  Menu_Text.c  Menu_Text.h  Player.c  Player.h  Portal.c  Portal.h  Rope.c  Rope.h  Score.c  Score.h  Timer.c  Timer.h  UI_Camera.c  UI_Camera.h  UI_Manager.c  UI_Manager.h
src/Game_Engine/: CMakeLists.txt  Game_Engine.c  geGame.c  geInput.c  geInput_States.c  geScene.c  geWindow.c
src/Scenes/: End_Level_Menu_Build.c  End_Level_Menu_Build.h  Level_1.c  Level_1.h  Level_1_Surfaces_Build.c  Level_1_Surfaces_Build.h  Level_2.c  Level_2.h  Level_2_Basic_Build.c  Level_2_Basic_Build.h  Level_3.c  Level_3.h  Level_4.c  Level_4.h  Level_4_Basic_Build.c  Level_4_Basic_Build.h  Level_5.c  Level_5.h  Level_6.c  Level_6.h  Level_7.c  Level_7.h  (+10 more)
(+143 files in other folders)
